--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "license": "MIT",
     "support": {
         "issues": "https://github.com/Nearata/flarum-ext-signup-cakeday/issues",
-        "source": "https://github.com/Nearata/flarum-ext-signup-cakeday"
+        "source": "https://github.com/Nearata/flarum-ext-signup-cakeday",
+        "forum": "https://discuss.flarum.org/d/26590"
     },
     "require": {
         "flarum/core": ">=0.1.0-beta.16 <=0.1.0"
