--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "anniversary"
     ],
     "type": "flarum-extension",
-    "license": "MIT",
+    "license": "Unlicense",
     "support": {
         "issues": "https://github.com/Nearata/flarum-ext-signup-cakeday/issues",
         "source": "https://github.com/Nearata/flarum-ext-signup-cakeday",
@@ -19,7 +19,7 @@
     "authors": [
         {
             "name": "Nearata",
-            "email": "williamdicicco@protonmail.com",
+            "email": "nearata@protonmail.com",
             "role": "Developer"
         }
     ],
