--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,7 @@
     "name": "nearata/flarum-ext-cakeday",
     "description": "Show a birthday cake emoji beside the names of members on their join anniversary.",
     "keywords": [
-        "flarum",
-        "cakeday",
-        "anniversary"
+        "flarum"
     ],
     "type": "flarum-extension",
     "license": "Unlicense",
@@ -14,7 +12,7 @@
         "forum": "https://discuss.flarum.org/d/26590"
     },
     "require": {
-        "flarum/core": "^1.0"
+        "flarum/core": "^1.8"
     },
     "authors": [
         {
