--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
         "forum": "https://discuss.flarum.org/d/26590"
     },
     "require": {
+        "php": "^8.0",
         "flarum/core": "^1.8"
+    },
+    "require-dev": {
+        "laravel/pint": "^1.5.0"
     },
     "authors": [
         {
@@ -36,5 +40,8 @@
                 "color": "#fff"
             }
         }
+    },
+    "scripts": {
+        "format": "pint src"
     }
 }
